# cluster-storage-troubleshooting

./: .gitignore  CSI_knowledge.txt  ENHANCED_KNOWLEDGE_GRAPH_SUMMARY.md  LICENSE  README.md  config.yaml  demo_graph_print.py  graph.py  historical_experience.json  hot.py  information_collector.py  issue_collector.py  knowledge_graph.py  monitor.py  pyproject.toml  repomix-output.xml  requirements.txt  run_comprehensive_mode.py  run_comprehensive_troubleshoot.sh  run_test.sh  run_tool_tests.sh  single.yaml  start_monitoring.sh  test_enhanced_knowledge_graph.py  test_plan_phase.py  test_troubleshoot.py  test_volume_drive_enhancement.py  tool_test_results.json  tools.py  troubleshoot.py
data/: historical_experience.json  static_plan_step.json
docs/: 01_monitoring_component_.md  02_troubleshooting_workflow_.md  03_information_collector_.md  04_diagnostic_tools_.md  05_knowledge_graph_.md  06_langgraph_react_agent_.md  07_prompt_management_.md  08_investigation_planner_.md  COMPREHENSIVE_MODE.md  ENHANCED_PHASE1_IMPLEMENTATION.md  ENHANCED_PHASE1_SUMMARY.md  HISTORICAL_EXPERIENCE_INTEGRATION.md  KNOWLEDGE_GRAPH_FIXES_SUMMARY.md  LLM_PROVIDERS_GUIDE.md  MCP_INTEGRATION_GUIDE.md  PHASE_BASED_ENHANCEMENT_SUMMARY.md  PLAN_PHASE_IMPLEMENTATION.md  PLAN_PHASE_IMPLEMENTATION_SUMMARY.md  PLAN_PHASE_REACT_IMPLEMENTATION.md  PROJECT_STRUCTURE.md  README.md  TOOLS_REORGANIZATION_SUMMARY.md  VOLUME_DRIVE_ENHANCEMENT_SUMMARY.md  design_requirement.md  enhanced_phase1_examples.py  index.md  langgraph_workflow.md  mcp_agent_example.py  phase0_information_collection.ipynb  phase1_react_investigation.ipynb  phase2_remediation.ipynb  plan_phase_investigation_plan.ipynb  refactored_langgraph_workflow.md  sample_investigation_plan.md  sample_investigation_plan_with_historical_experience.md  troubleshoot_workflow.ipynb
examples/: standalone_react_example.py
information_collector/: README.md  __init__.py  base.py  collector.py  knowledge_builder.py  metadata_parsers.py  tool_executors.py  volume_discovery.py
(+96 files in other folders)
