[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cluster-storage-troubleshooting"
version = "0.1.0"
description = "A Python-based system for monitoring and resolving volume I/O errors in Kubernetes pods backed by local disks managed by the CSI Baremetal driver"
readme = "README.md"
requires-python = ">=3.13.3"
license = {file = "LICENSE"}
authors = [
    {name = "Kubernetes Volume Troubleshooting System", email = "example@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "kubernetes",
    "langchain>=0.3.25",
    "langchain-openai>=0.3.17",
    "langgraph",
    "paramiko",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/example/cluster-storage-troubleshooting"
"Bug Tracker" = "https://github.com/example/cluster-storage-troubleshooting/issues"

[tool.hatch.build.targets.wheel]
packages = ["monitor.py", "troubleshoot.py", "test_troubleshoot.py"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
